--- a/main.css
+++ b/main.css
@@ -1,6 +1,12 @@
 
-body{
-  color: red
+.red{
+
+  /* background-color: red; */
+  width: 600px;
+  height: 600px;
+  display: inline-block;
+  border: solid black 10px;
+
 }
 
 
